@@ -229,6 +229,9 @@ Other Changes
 
 * SOLR-7740: Fix typo bug with TestConfigOverlay (Christine Poerschke via Ramkumar Aiyengar)
 
+* SOLR-7750: Change TestConfig.testDefaults to cover all SolrIndexConfig fields
+  (Christine Poerschke via Ramkumar Aiyengar)
+
 ==================  5.2.1 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
